// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangeLegend should render 1`] = `
<div
  className="change-legend-root"
>
  <div
    className="legend-item activities"
    key="activities"
  >
    <div
      className="legend-header"
    >
      <span
        className="legend-color"
        style={
          Object {
            "backgroundColor": "#4B9BFF",
          }
        }
      />
      <span
        className="title"
      >
        Total Activity Count: 50
      </span>
    </div>
    <div
      className="secondary-info"
    >
      30 Day Total
      <span
        className="change increase"
      >
        <Icon
          symbol="caret-top"
        />
        200.0%
      </span>
    </div>
  </div>
</div>
`;

exports[`ChangeLegend should render with a decrease if change is negative 1`] = `
<div
  className="change-legend-root"
>
  <div
    className="legend-item activities"
    key="activities"
  >
    <div
      className="legend-header"
    >
      <span
        className="legend-color"
        style={
          Object {
            "backgroundColor": "#4B9BFF",
          }
        }
      />
      <span
        className="title"
      >
        Total Activity Count: 50
      </span>
    </div>
    <div
      className="secondary-info"
    >
      30 Day Total
      <span
        className="change decrease"
      >
        <Icon
          symbol="caret-bottom"
        />
        200.0%
      </span>
    </div>
  </div>
</div>
`;

exports[`ChangeLegend should render with hypens if change is Infinite 1`] = `
<div
  className="change-legend-root"
>
  <div
    className="legend-item activities"
    key="activities"
  >
    <div
      className="legend-header"
    >
      <span
        className="legend-color"
        style={
          Object {
            "backgroundColor": "#4B9BFF",
          }
        }
      />
      <span
        className="title"
      >
        Total Activity Count: 50
      </span>
    </div>
    <div
      className="secondary-info"
    >
      30 Day Total
      <span
        className="change increase"
      >
        <Icon
          symbol="caret-top"
        />
        --
      </span>
    </div>
  </div>
</div>
`;

exports[`ChangeLegend should render with no icon if change is 0 1`] = `
<div
  className="change-legend-root"
>
  <div
    className="legend-item activities"
    key="activities"
  >
    <div
      className="legend-header"
    >
      <span
        className="legend-color"
        style={
          Object {
            "backgroundColor": "#4B9BFF",
          }
        }
      />
      <span
        className="title"
      >
        Total Activity Count: 50
      </span>
    </div>
    <div
      className="secondary-info"
    >
      30 Day Total
      <span
        className="change"
      >
        0.0%
      </span>
    </div>
  </div>
</div>
`;
